--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 
 compiler:
   - clang
-  - gcc
+#  - gcc
 
 env:
 #  - BUILD_TYPE=Debug
@@ -22,3 +22,4 @@ install:
 script:
   - cd Build
   - ctest -V
+
